--- a/View/HomePage.xaml
+++ b/View/HomePage.xaml
@@ -3,7 +3,8 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:viewModel="clr-namespace:PinusPengger.ViewModel"
+      xmlns:viewModel="clr-namespace:PinusPengger.ViewModel.BasePageVM"
+      xmlns:helper="clr-namespace:PinusPengger.ViewModel.Helper"
       xmlns:model="clr-namespace:PinusPengger.Model"
       xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
       xmlns:sys="clr-namespace:System;assembly=mscorlib"
@@ -11,10 +12,10 @@
       d:DesignHeight="420" 
       d:DesignWidth="920">
     <Page.Resources>
-        <viewModel:Ticker x:Key="ticker"/>
+        <helper:Ticker x:Key="ticker"/>
     </Page.Resources>
     <Page.DataContext>
-        <viewModel:HomeViewModel/>
+        <viewModel:DisplayReservationsVM/>
     </Page.DataContext>
     <Grid Background="White">
         <Grid.RowDefinitions>
@@ -73,15 +74,15 @@
                   ItemsSource="{Binding ReservationJoineds}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Kode Pemesanan" 
-                                    Binding="{Binding ReservationEntity.ResCode}"/>
+                                    Binding="{Binding Reservation.ReservationCode}"/>
                 <DataGridTextColumn Header="Nama" Width="200" 
-                                    Binding="{Binding CustomerEntity.CustName}"/>
+                                    Binding="{Binding Customer.FullName}"/>
                 <DataGridTextColumn Header="Nomor Kamar" Width="*"  
-                                    Binding="{Binding RoomEntity.RoomCode}"/>
+                                    Binding="{Binding Room.RoomCode}"/>
                 <DataGridTextColumn Header="Tanggal Checkin" Width="*" 
-                                    Binding="{Binding ReservationEntity.ResCheckIn, StringFormat='dd/MM/yyyy'}"/>
+                                    Binding="{Binding Reservation.Checkin, StringFormat='dd/MM/yyyy'}"/>
                 <DataGridTextColumn Header="Tanggal Checkout" Width="*"  
-                                    Binding="{Binding ReservationEntity.ResCheckOut, StringFormat='dd/MM/yyyy'}"/>
+                                    Binding="{Binding Reservation.Checkout, StringFormat='dd/MM/yyyy'}"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
