--- a/View/HistoryPage.xaml
+++ b/View/HistoryPage.xaml
@@ -73,7 +73,7 @@
                   Grid.Row="3"
                   CanUserAddRows="False"
                   IsReadOnly="True"
-                  ItemsSource="{Binding HistoryJoineds}">
+                  ItemsSource="{Binding HistoryJoinedsObservable}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Kode Pemesanan" 
                                     Binding="{Binding History.ReservationCode}"/>
