--- a/View/LoginWindow.xaml
+++ b/View/LoginWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:viewModel="clr-namespace:PinusPengger.ViewModel"
         xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
-        Title="Hotel Jaya Abadi - Login Page" 
+        Title="Hotel Pinus Pengger - Login Page" 
         Height="540" 
         Width="960"
         ResizeMode="CanMinimize"
@@ -190,6 +190,6 @@
                HorizontalAlignment="Center" 
                VerticalAlignment="Center" 
                FontFamily="Leelawadee"
-               Text="Hotel Jaya Abadi"/>
+               Text="Hotel Pinus Pengger"/>
     </Grid>
 </Window>
