--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:viewModel ="clr-namespace:PinusPengger.ViewModel"
         xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
-        Title="Hotel Jaya Abadi" 
+        Title="Hotel Pinus Pengger" 
         Height="540" 
         Width="960" 
         ResizeMode="CanMinimize"
@@ -121,7 +121,7 @@
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center" 
                        FontWeight="Bold"
-                       Text="Hotel Jaya Abadi"/>
+                       Text="Hotel Pinus Pengger"/>
                 <StackPanel Grid.Column="1"
                             Orientation="Horizontal">
                     <RadioButton Height="40"
