--- a/View/HistoryPage.xaml
+++ b/View/HistoryPage.xaml
@@ -3,7 +3,6 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:helper="clr-namespace:PinusPengger.ViewModel.Helper"
       xmlns:viewModel="clr-namespace:PinusPengger.ViewModel.BasePageVM"
       xmlns:local="clr-namespace:PinusPengger.View"
       xmlns:model="clr-namespace:PinusPengger.Model"
@@ -12,9 +11,6 @@
       mc:Ignorable="d" 
       d:DesignHeight="420" 
       d:DesignWidth="920">
-    <Page.Resources>
-        <helper:Ticker x:Key="ticker"/>
-    </Page.Resources>
     <Page.DataContext>
         <viewModel:DisplayHistoriesVM/>
     </Page.DataContext>
@@ -39,7 +35,7 @@
                        Grid.Column="0"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
-                       Text="{Binding Source={StaticResource ticker},Path=Now, Mode=OneWay, StringFormat='dd MMMM yyyy  hh:mm:ss' }"/>
+                       Text="{Binding TimeNow, StringFormat='G'}"/>
             </Grid>
         </Border>
         <StackPanel Grid.Row="2"
