--- a/View/HomePage.xaml
+++ b/View/HomePage.xaml
@@ -4,16 +4,12 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:viewModel="clr-namespace:PinusPengger.ViewModel.BasePageVM"
-      xmlns:helper="clr-namespace:PinusPengger.ViewModel.Helper"
       xmlns:model="clr-namespace:PinusPengger.Model"
       xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
       xmlns:sys="clr-namespace:System;assembly=mscorlib"
       mc:Ignorable="d" 
       d:DesignHeight="420" 
       d:DesignWidth="920">
-    <Page.Resources>
-        <helper:Ticker x:Key="ticker"/>
-    </Page.Resources>
     <Page.DataContext>
         <viewModel:DisplayReservationsVM/>
     </Page.DataContext>
@@ -38,7 +34,7 @@
                        Grid.Column="0"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
-                       Text="{Binding Source={StaticResource ticker},Path=Now, Mode=OneWay, StringFormat='dd MMMM yyyy  hh:mm:ss' }"/>
+                       Text="{Binding TimeNow, StringFormat='G'}"/>
             </Grid>
         </Border>
         <StackPanel Grid.Row="2"
