--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -304,7 +304,8 @@
                Placement="Left"
                IsOpen="{Binding ShowUserProfile}"
                Height="120" 
-               Width="150">
+               Width="150"
+               AllowsTransparency="True">
             <uc:UserProfilePopup/>
         </Popup>
     </Grid>
