--- a/View/DataKamarPopUp.xaml
+++ b/View/DataKamarPopUp.xaml
@@ -83,15 +83,20 @@
                 </Border>
                 <Grid Grid.Column="1">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="0.8*"/>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="0.35*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Row="0" 
@@ -99,6 +104,59 @@
                                Text="Deskripsi"
                                FontWeight="Bold"
                                FontSize="20"
+                               FontFamily="Inter"/>
+                    <TextBlock Grid.Row="1" 
+                               Grid.Column="0" 
+                               Text="Kode Kamar"
+                               FontSize="12"
+                               FontFamily="Inter"/>
+                    <TextBlock Grid.Row="2" 
+                               Grid.Column="0" 
+                               Text="Lantai"
+                               FontSize="12"
+                               FontFamily="Inter"/>
+                    <TextBlock Grid.Row="3" 
+                               Grid.Column="0" 
+                               Text="Nomor Kamar"
+                               FontSize="12"
+                               FontFamily="Inter"/>
+                    <TextBlock Grid.Row="4" 
+                               Grid.Column="0" 
+                               Text="Luas Kamar"
+                               FontSize="12"
+                               FontFamily="Inter"/>
+                    <TextBlock Grid.Row="5" 
+                               Grid.Column="0" 
+                               Text="Tipe Kamar"
+                               FontSize="12"
+                               FontFamily="Inter"/>
+                    <TextBlock Grid.Row="6" 
+                               Grid.Column="0" 
+                               Text="Fasilitas:"
+                               FontWeight="SemiBold"
+                               FontSize="12"
+                               FontFamily="Inter"/>
+                    <TextBlock Grid.Row="7" 
+                               Grid.Column="0" 
+                               Text="Jenis Kasur"
+                               FontSize="12"
+                               FontFamily="Inter"/>
+                    <TextBlock Grid.Row="8" 
+                               Grid.Column="0" 
+                               Text="Kecepatan Internet"
+                               FontSize="12"
+                               FontFamily="Inter"/>
+                    <TextBlock Grid.Row="9" 
+                               Grid.Column="0" 
+                               Text="Fasilitas Kamar Mandi"
+                               TextWrapping="Wrap"
+                               FontSize="12"
+                               FontFamily="Inter"/>
+                    <TextBlock Grid.Row="10" 
+                               Grid.Column="0" 
+                               Text="Fasilitas Lainnya"
+                               TextWrapping="Wrap"
+                               FontSize="12"
                                FontFamily="Inter"/>
                 </Grid>
             </Grid>
