working detailkamar window

--- a/View/DataKamarPopUp.xaml
+++ b/View/DataKamarPopUp.xaml
@@ -17,17 +17,19 @@
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.105*"/>
+            <RowDefinition Height="0.093*"/>
             <RowDefinition/>
             <RowDefinition Height="0.205*"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0"
-                   Text="K.2.3"
+        <Grid Grid.Row="0" Background="Orange" MouseDown="Grid_MouseDown">
+            <TextBlock Grid.Row="0"
+                   Text="{Binding RoomDetails.Room.RoomCode}"
                    VerticalAlignment="Center"
                    FontFamily="Inter"
                    FontSize="18"
                    FontWeight="Bold"
                    Margin="5,0,0,0"/>
+        </Grid>
         <Button Grid.Row="0"
                 BorderThickness="0"
                 Foreground="White"
@@ -95,7 +97,6 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0.35*"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
@@ -107,13 +108,13 @@
                                FontFamily="Inter"/>
                     <TextBlock Grid.Row="0"
                                Grid.Column="0"
-                               Text="Lantai: "
+                               Text="{Binding RoomDetails.Room.RoomFloor, StringFormat='Lantai: {0}'}"
                                FontWeight="Bold"
                                FontSize="18"
                                VerticalAlignment="Center"/>
                     <TextBlock Grid.Row="0"
                                Grid.Column="1"
-                               Text="Nomor: "
+                               Text="{Binding RoomDetails.Room.RoomNumber, StringFormat='Nomor: {0}'}"
                                FontWeight="Bold"
                                FontSize="18"
                                VerticalAlignment="Center"/>
